# skill-search

./: .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  web_ui.py
skill_search/: evaluate.py  fill_db.py  main.py  rag.py  web_ui.py
utils/: restart_chromadb.sh
