[tool.poetry]
name = "skill-search"
version = "0.1.0"
description = ""
authors = ["Tomislav Ignjatov <tomislav@codechem.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pymupdf = "^1.25.5"
chromadb = "^1.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
