[tool.poetry]
name = "skill-search"
version = "0.1.0"
description = ""
authors = ["Tomislav Ignjatov <tomislav@codechem.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pymupdf = "^1.25.5"
chromadb = "^1.0.8"
openai = "^1.78.0"
sentence-transformers = "^4.1.0"
streamlit = "^1.45.1"
watchdog = "^6.0.0"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
